Task 5/non-admin-api-allow.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: non-admin-api-allow
spec:
  podSelector:
    matchLabels:
      role: front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: back-end-api
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: back-end-api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-api-allow
spec:
  podSelector:
    matchLabels:
      role: admin-front-end
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-back-end-api
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-back-end-api
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-allow
spec:
  podSelector:
    matchLabels:
      role: back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: front-end
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: admin-backend-allow
spec:
  podSelector:
    matchLabels:
      role: admin-back-end-api
  ingress:
  - from:
    - podSelector:
        matchLabels:
          role: admin-front-end
  egress:
  - to:
    - podSelector:
        matchLabels:
          role: admin-front-end
